--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,3 +1,9 @@
-<p>
-  graficas1 works!
-</p>
+<div class="row">
+    <div class="col-6" *ngFor="let grafico of graficos; let id = index">
+        <div class="card">
+            <div class="card-body">
+                <app-donut [data]="grafico.data" [labels]="grafico.labels" [chartType]="grafico.type"></app-donut>
+            </div>
+        </div>
+    </div>
+</div>
