Subir imagenes y modal general para subir de donde sea imagenes

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -39,3 +39,5 @@
     <!-- End Page wrapper  -->
     <!-- ============================================================== -->
 </div>
+
+<app-modal-upload></app-modal-upload>
