--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
 
-                <li *ngFor="let menu of _sidebar.menu"> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i class="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right"> {{ menu.submenu.length }}</span></span></a>
+                <li *ngFor="let menu of _sidebar.menu"> <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i class="{{ menu.icon }}"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right"> {{ menu.submenu.length }}</span></span></a>
                     <ul aria-expanded="false" class="collapse">
 
                         <li *ngFor="let submenu of menu.submenu">
