Listado de Usuarios/Hospitales/Medicos

--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -41,7 +41,7 @@
                     <tbody>
                         <tr *ngFor="let usuario of usuarios">
                             <td class="w70">
-                                <img (click)="mostrarModal( usuario._id )" [src]="usuario.img | imagen" class="w50 img-circle pointer">
+                                <img (click)="mostrarModal( usuario._id )" [src]="usuario.img | imagen: 'usuario'" class="w50 img-circle pointer">
                             </td>
                             <td>{{ usuario.email }}</td>
                             <td>{{ usuario.nombre }}</td>
@@ -52,7 +52,7 @@
                                 </select>
                             </td>
                             <td>
-                                <label *ngIf="usuario.auth" class="label label-danger">Google</label>
+                                <label *ngIf="usuario.google" class="label label-danger">Google</label>
                                 <label class="label label-info">Normal</label>
                             </td>
                             <td>
