--- a/src/app/pages/medicos/medico.component.html
+++ b/src/app/pages/medicos/medico.component.html
@@ -1,3 +1,46 @@
-<p>
-  medico works!
-</p>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card card-body">
+            <h3 class="box-title m-b-0">Médico: </h3>
+            <div class="row">
+                <div class="col-sm-12 col-xs-12">
+
+                    <form #f="ngForm" ngNativeValidate (ngSubmit)="guardarMedico(f)">
+                        <div class="form-group">
+                            <label>Nombre del médico</label>
+                            <input [(ngModel)]="medico.nombre" name="nombre" type="text" class="form-control" placeholder="Nombre del médico" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Hospital</label>
+                            <select [(ngModel)]="medico.hospital" name="hospital" class="form-control" required>
+                              <option value="" selected>Selecciona hospital</option>
+                              <option *ngFor="let hospital of hospitales.hospitales" [value]="hospital._id">
+                                {{ hospital.nombre }}
+                              </option>
+                            </select>
+                        </div>
+
+                        <button routerLink="/medicos" class="btn btn-inverse waves-effect waves-light m-r-5">Cancelar</button>
+                        <button type="submit" class="btn btn-success waves-effect waves-light ">Guardar
+                          <i class="fa fa-save"></i>
+                        </button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <div class="card card-body">
+            <h4 class="box-title m-b-0">Hospital </h4>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <div class="card card-body">
+            <h4 class="box-title m-b-0">Imagen </h4>
+            <img src="" alt="">
+        </div>
+    </div>
+</div>
