--- a/src/app/pages/medicos/medico.component.html
+++ b/src/app/pages/medicos/medico.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card card-body">
-            <h3 class="box-title m-b-0">Médico: </h3>
+            <h3 class="box-title m-b-0">Médico: {{ medico.nombre }} </h3>
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
 
@@ -12,7 +12,7 @@
                         </div>
                         <div class="form-group">
                             <label>Hospital</label>
-                            <select [(ngModel)]="medico.hospital" name="hospital" class="form-control" required>
+                            <select (change)="cambioHospital( $event.target.value )" [(ngModel)]="medico.hospital" name="hospital" class="form-control" required>
                               <option value="" selected>Selecciona hospital</option>
                               <option *ngFor="let hospital of hospitales.hospitales" [value]="hospital._id">
                                 {{ hospital.nombre }}
@@ -20,7 +20,7 @@
                             </select>
                         </div>
 
-                        <button routerLink="/medicos" class="btn btn-inverse waves-effect waves-light m-r-5">Cancelar</button>
+                        <a routerLink="/medicos" class="btn btn-inverse waves-effect waves-light m-r-5">Cancelar</a>
                         <button type="submit" class="btn btn-success waves-effect waves-light ">Guardar
                           <i class="fa fa-save"></i>
                         </button>
@@ -34,13 +34,15 @@
     <div class="col-md-3">
         <div class="card card-body">
             <h4 class="box-title m-b-0">Hospital </h4>
+
+            <img [src]="hospital.img | imagen:'hospital'" class="rounded img-fluid">
         </div>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="medico._id">
         <div class="card card-body">
             <h4 class="box-title m-b-0">Imagen </h4>
-            <img src="" alt="">
+            <img (click)="cambiarFoto()"[src]="medico.img | imagen:'medico'" class="img-circle img-fluid pointer">
         </div>
     </div>
 </div>
