--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -43,8 +43,9 @@
                 <!-- Search -->
                 <!-- ============================================================== -->
                 <li class="nav-item hidden-xs-down search-box"> <a class="nav-link hidden-sm-down waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
-                    <form class="app-search">
-                        <input type="text" class="form-control" placeholder="Search & enter"> <a class="srh-btn"><i class="ti-close"></i></a> </form>
+                    <div class="app-search">
+                        <input #input (keyup.enter)="buscar( input.value )" type="text" class="form-control" placeholder="Buscar & Intro"> <a class="srh-btn"><i class="ti-close"></i></a> 
+                    </div>
                 </li>
                 <!-- ============================================================== -->
                 <!-- Messages -->
@@ -119,8 +120,8 @@
                             </li>
                             <li role="separator" class="divider"></li>
                             <li><a routerLink="/profile"><i class="ti-user"></i> My Profile</a></li>
-                            <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
-                            <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
+                            <!-- <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li> -->
+                            <!-- <li><a href="#"><i class="ti-email"></i> Inbox</a></li> -->
                             <li role="separator" class="divider"></li>
                             <li><a routerLink="/account-settings"><i class="ti-settings"></i> Account Setting</a></li>
                             <li role="separator" class="divider"></li>
